# dash-material-components

./: .babelrc  .editorconfig  .eslintignore  .eslintrc  .gitattributes  .gitignore  .prettierrc  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  dotenv.tpl  jest.config.js  package.json  pyproject.toml  setup.cfg  tsconfig.json  webpack.config.js  webpack.serve.config.js
.circleci/: config.yml
.devcontainer/: devcontainer.json  post-create.sh
.github/: pull_request_template.md
dash_material_components/: __init__.py
dash_material_components/themes/: __init__.py  utils.py
dash_mdc_neptune/: __init__.py
dash_mdc_neptune/themes/: __init__.py  base.py  definitions.py  matplotlib.py  matplotlib_templates.py  pandas.py  pandas_templates.py  plotly.py  plotly_templates.py  utils.py
docker/: docker-compose.yml  dotenv.tpl
docker/jupyterlab/: .dockerignore  Dockerfile  environment.yml  package.list
docker/jupyterlab/lab/: build_config.json  overrides.json  page_config.json
docker/jupyterlab/nbconvert/: jupyter_nbconvert_config.py
docker/singleuser/: .dockerignore  Dockerfile  Pipfile
docker/singleuser/git/: .gitconfig  nbstrip
docker/singleuser/ipython/: start.py
docker/singleuser/lab/: page_config.json
notebooks/: Day Ahead Auctions.ipynb  Short Term Markets.ipynb  Wholesale Hedge Trades.ipynb  autocomplete.json  test_alert.ipynb  test_csv_uploader.ipynb  test_dash_app.ipynb  test_download.ipynb  test_inputs.ipynb  test_layout.ipynb  test_sidebar.ipynb  test_tab.ipynb  test_table.ipynb  test_toggle.ipynb
scripts/: _validate_init.py
src/: index.js  index.ts  props.ts
src/components/: Box.jsx  Box.react.js  Card.jsx  Card.react.js  Container.jsx  Container.react.js  Dashboard.jsx  Dashboard.react.js  Dashboard.tsx  NavBar.jsx  NavBar.react.js  Page.jsx  Paper.jsx  Paper.react.js  Section.jsx  Section.react.js  Tab.jsx  Table.jsx  Toggle.jsx  Typography.jsx
src/components/display/: Alert.jsx  Alert.tsx  Box.jsx  Box.tsx  Divider.jsx  Dropdown.jsx  Tab.jsx  Table.jsx  Table.tsx  Toggle.jsx  Typography.jsx  Typography.tsx
src/components/inputs/: Autocomplete.jsx  Autocomplete.test.js  Autocomplete.tsx  Button.jsx  Button.tsx  Calendar.jsx  Calendar.tsx  CodeEditor.tsx  CsvUploader.tsx  Dropdown.jsx  Dropdown.tsx  IconButton.tsx  InputText.jsx  InputText.tsx  Slider.jsx  Slider.test.js  Slider.tsx  Toggle.jsx  Toggle.tsx
src/components/layout/: Error.jsx  NavBar.jsx  NavBar.tsx  Page.jsx  Page.tsx  Section.jsx  Section.tsx  SideBar.jsx  SideBar.tsx  Tab.jsx  Tab.tsx
src/fragments/: Autocomplete.tsx  Calendar.tsx  Card.jsx  Card.tsx  CodeEditor.tsx  CodeEditorAutocomplete.tsx  CsvUploader.tsx  Error.tsx  Input.jsx  NoosIcon.jsx  NoosIcon.react.js  Page.react.js  SectionGrid.jsx  SectionGrid.tsx  TabPanel.jsx  TabPanel.tsx  TableContent.jsx  TableContent.tsx
src/lib/: index.js
src/lib/components/: DashMdcNeptune.react.js
src/parsers/: enedis.js
src/tests/: Autocomplete.test.js  Autocomplete.test.tsx  InputText.test.js  InputText.test.tsx  Slider.test.js  Slider.test.tsx  enedisParser.test.js
src/tests/fixtures/: pricing_template_m021.csv  pricing_template_m022.csv  pricing_template_m023.csv  pricing_template_simple.csv
src/utils/: ThemeProvider.jsx  ThemeProvider.tsx  createEmotionCache.ts  theme.js  theme.ts
src/utils/LazyLoader/: Calendar.js  CodeEditor.js  CsvUploader.js
tests/: index.html  usage.py
tests/demo/: App.js
tests/display/: test_alert.py  test_table.py  test_typography.py
tests/input/: test_autocomplete.py  test_calendar.py  test_dropdown.py  test_input_text.py  test_slider.py  test_toggle.py
tests/layout/: test_navbar.py  test_page.py  test_sidebar.py  test_tab.py
tests/unit/input/: autocomplete.test.js  imput_text.test.js  sliter.test.js
