[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-material-components"
version = "2.2.0"
description = "Dash Material Design components for the Noos platform."
# Credentials
authors = [{ name = "Noos Energy", email = "contact@noos.energy" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    # https://github.com/GibbsConsulting/django-plotly-dash/blob/master/requirements.txt
    "dash>=2.10,<3.0",
]

[dependency-groups]
dev = [
    # Testing
    "dash[dev,testing]",
    "selenium>=4.0",
    # Linter
    "ruff>=0.9.3",
    "mypy>=1.0.0",
    # Debugging
    "ipdb>=0.13.0",
    "ipython>=8.26.0",
    "jupyterlab>=4.2.0",
]

[tool.hatch.build]
ignore-vcs = true
only-include = ["dash_material_components", "LICENSE", "package.json"]

[tool.ruff]
line-length = 99
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    # Pydocstyle
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Incompatible rules with D211 & D212
    "D203", "D213",
]
select = [
    # Flake8
    "F", "C90",
    # Pycodestyle
    "E", "W",
    # Pydocstyle
    "D",
    # Isort
    "I",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
default-section = "third-party"
known-first-party = ["dash_material_components", "tests"]
section-order = ["standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
install_types = true
non_interactive = true
incremental = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test"
python_functions = "test_*"
junit_family = "xunit2"
filterwarnings = [
    "error::RuntimeWarning",
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]
addopts = "--headless --webdriver=Firefox --junitxml=.pytest_results/junit.xml"
